plugins {
    id 'com.android.library'
}

android {
    namespace 'io.github.alexmofer.android.support'
    compileSdk {
        version = release(37) {
            minorApiLevel = 2
        }
    }

    defaultConfig {
        minSdk 24
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    publishing {
        singleVariant("release") {
            withSourcesJar()
            withJavadocJar()
        }

        multipleVariants {
            withSourcesJar()
            withJavadocJar()
            allVariants()
        }
    }
}

dependencies {
    implementation 'androidx.annotation:annotation:1.10.0'
    implementation 'androidx.collection:collection:1.6.0'
    implementation 'androidx.core:core:1.19.0'
    implementation 'androidx.appcompat:appcompat:1.8.0'
    implementation 'androidx.window:window:1.5.1'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.2'
    implementation 'androidx.documentfile:documentfile:1.1.0'
    implementation 'androidx.exifinterface:exifinterface:1.4.2'
    implementation 'androidx.activity:activity:1.13.0'
    implementation 'androidx.transition:transition:1.7.1'
    implementation 'androidx.dynamicanimation:dynamicanimation:1.1.0'
    implementation 'androidx.concurrent:concurrent-futures:1.3.0'
    implementation 'com.google.code.gson:gson:2.14.0'
    compileOnly 'androidx.viewpager2:viewpager2:1.1.0'
    compileOnly 'com.github.bumptech.glide:glide:5.0.9'
}

//apply from: "maven-central-aar.gradle"
//apply from: "maven-local-aar.gradle"